localization fixes for the AUS

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -125,7 +125,7 @@ TEX_loyalty_to_long_desc:0 "Loyalty to Huey Long must be stressed. Huey Long is 
 TEX_I_am_for_the_poor_man:0 "I am for the Poor man"
 TEX_I_am_for_the_poor_man_desc:0 "I'm for the poor man — all poor men, black and white, they all gotta have a chance. They gotta have a home, a job, and a decent education for their children"
 TEX_perfect_dictatorship:0 "It Can Happen Here!"
-TEX_perfect_dictatorship_desc:0 "A man is not a dictator when he is given a commission from the people and carries it out. A perfect democracy can come close to looking like a dictatorship, a democracy in which the people are so satisfied they have no complaint.""
+TEX_perfect_dictatorship_desc:0 "A man is not a dictator when he is given a commission from the people and carries it out. A perfect democracy can come close to looking like a dictatorship, a democracy in which the people are so satisfied they have no complaint."
 TEX_every_man_a_king:0 "Every Man a King!"
 TEX_every_man_a_king_desc:0 "Those are the things we propose to do. "Every man a king." Every man to eat when there is something to eat - all to wear something when there is something to wear. That makes us all sovereign."
 TEX_american_legion:0 "Jim Crow's America"
@@ -159,73 +159,68 @@ TEX_rebuilding_the_pacific_desc:0 "It is time to rebuild the West Coast. While t
 TEX_rebuilding_new_england:0 "Rebuilding New England"
 TEX_rebuilding_new_england_desc:0 "It is time to rebuild New England. While the region tried to remain safe by working with the Canadians even this region of the country suffered the devastation consequences of the civil war"
 TEX_reclaim_south_west:0 "Reclaim the South West"
-TEX_reclaim_south_west_desc:0 "-"
+TEX_reclaim_south_west_desc:0 "It is time to reclaim the South West. The vile Mexicans decided to attack America during the civil war and they must be driven back. We must reclaim the land by diplomacy or force we shall reclaim the south west for America!"
 TEX_industrial_security_act:0 "The Industrial Security Act"
-TEX_industrial_security_act_desc:0 "-"
+TEX_industrial_security_act_desc:0 "The Industrial Security Act was Long's answer to the trade unions of the north. The act would make any disruption of essential industries by work stoppages a conspiracy to commit industrial sabotage and would be punishable by imprisonment. The wording on the act was intentionally vague to give the President a highly effective means with which to defeat the unions"
 TEX_infastructure_renewel:0 "The Education Reform Bill"
-TEX_infastructure_renewel_desc:0 "-"
+TEX_infastructure_renewel_desc:0 "Raise all the hell you want to, print what you want to. But we're going to have the schools and every qualified poor boy can go."
 TEX_soldier_bill:0 "Patriotic Soldiers Bill"
-TEX_soldier_bill_desc:0 "-"
-TEX_found_abc:0 "Found ABC"
-TEX_found_abc_desc:0 "-"
+TEX_soldier_bill_desc:0 "We ought to take care of every single one of the sick and disabled veterans. I do not care whether a man got sick on the battlefield or did not; every man that wore the uniform of this country is entitled to be taken care of, and there is money enough to do it."
+TEX_found_abc:0 "Support ABC"
+TEX_found_abc_desc:0 "Huey Long and his allies have long supported the use of the radio. As governor he became one of the first to extensively use it to reach countless people. Father Coughlin used it to speak to many devoted people. We should support a national radio company, the American Broadcast Corporation to help speak directly to the people. "
 TEX_economic_rebirth:0 "Economic Rebirth"
-TEX_economic_rebirth_desc:0 "-"
+TEX_economic_rebirth_desc:0 "It has taken some time but the economy is undergoing a rebirth and things are back on track. The country is moving full steam ahead thanks to the Kingfish and his allies. "
 TEX_a_new_america:0 "A new America"
-TEX_a_new_america_desc:0 "-"
+TEX_a_new_america_desc:0 "The country is now rebuilt from the horrors of the civil war. From sea to shinning sea the country has been rebuilt. A new America has been rebuilt from the ashes of war. "
 TEX_new_american_day:0 "New American Day"
-TEX_new_american_day_desc:0 "-"
+TEX_new_american_day_desc:0 "Finally the country is back on sound footing. The country has been transformed into a newer and prouder union. The horrors of the civil war are slowly but surely fading as a new day dawns on America. "
 
 ### Focuses - Foreign Policy ###
 TEX_long_doctrine:0 "Long Doctrine"
-TEX_long_doctrine_desc:0 "-"
+TEX_long_doctrine_desc:0 "With the civil war over, it is time for us to look a far. Syndicalism is not just a problem here in America but throughout the world. To isolate ourselves it to make America weak and to let godless syndicalism fester before it comes after us. It is time for the Long Corollary to the Monroe Doctrine!"
 TEX_war_plan_gold:0 "War Plan Gold"
-TEX_war_plan_gold_desc:0 "-"
-TEX_anti_syndicalist_pact:0 "Anti-Syndicalist Pact"
-TEX_anti_syndicalist_pact_desc:0 "-"
+TEX_war_plan_gold_desc:0 "Our military strategists have devised a plan for striking at the heart of syndicalism itself – the Commune of France. The modern Babylon if there ever was one. Let us prepare to strike the French and destroy them once an for all. "
 TEX_embargo_international:0 "Embargo the International"
-TEX_embargo_international_desc:0 "-"
+TEX_embargo_international_desc:0 "To cut off the head of the Syndicalist serpent, we must engage in an embargo. We are the workshop of the world and with American efforts this 'international' shall be crushed by our economic power!"
 TEX_strike_the_international:0 "Strike the International"
-TEX_strike_the_international_desc:0 "-"
-TEX_war_plan_brown:0 "Plan Brown"
-TEX_war_plan_brown_desc:0 "-"
-TEX_fate_of_the_philippines:0 "Reclaiming Alaska"
-TEX_fate_of_the_philippines_desc:0 "-"
+TEX_strike_the_international_desc:0 "Now is the time and now is the hour for Godless Syndicalism to be destroyed! We must declare our war against the Commune of France and the International. America will never be safe as long as they remain. So time to make America safe and destroy the French!"
 TEX_war_plan_purple:0 "War Plan Purple"
-TEX_war_plan_purple_desc:0 "-"
+TEX_war_plan_purple_desc:0 "Our military strategists have devised a plan for keeping America safe in the western Hemisphere. Long under our protection as per the Monroe doctrine, now we must work with the other nations to destroy syndicalism and any and all threats to America that may be in our own backyard. "
 TEX_cuban_intervention:0 "Cuban Intervention"
-TEX_cuban_intervention_desc:0 "-"
+TEX_cuban_intervention_desc:0 "The island of Cuba was always closely tied to America before the civil war, now that the civil war is over. We should go and keep them in our sphere of influence and make sure that such an island can never be a dagger at our back. "
 TEX_haitian_intervention:0 "Haitian Intervention"
-TEX_haitian_intervention_desc:0 "-"
+TEX_haitian_intervention_desc:0 "Barely a decade ago the US had occupied to keep Haiti safe. We must make sure that Haiti remains safe and in our sphere of influence. No island in the Caribbean should be a potential dagger at our back."
 TEX_dominican_intervention:0 "Dominican Intervention"
-TEX_dominican_intervention_desc:0 "-"
+TEX_dominican_intervention_desc:0 "Barely a decade ago the US had occupied to keep the Dominican Republic safe. We must make sure that the Dominican Republic remains safe and in our sphere of influence. No island in the Caribbean should be a potential dagger at our back."
 TEX_mexican_intervention:0 "Mexican Intervention"
-TEX_mexican_intervention_desc:0 "-"
+TEX_mexican_intervention_desc:0 "The old corrupt government of America had long ignored the threat that Mexico poised to America. Now that the civil war is over, it is time to make sure that syndicalism in Mexico is crushed once and for all. "
 TEX_central_intervention:0 "Intervention in Central America"
-TEX_central_intervention_desc:0 "-"
+TEX_central_intervention_desc:0 "The old corrupt government of America had long ignored the threat that Central America poised to America. Now that the civil war is over, it is time to make sure that syndicalism in Central America is crushed once and for all. Thankfully the United Provinces are there to defend our interests and help us destroy syndicalism."
 TEX_panaman_intervention:0 "Panamá Intervention"
-TEX_panaman_intervention_desc:0 "-"
+TEX_panaman_intervention_desc:0 "Panama has always been closely aligned with America, and as the canal is in their region, we must keep the country from falling to syndicalists hands. We must intervene to protect American interests and destroy yet another vile cell of Syndicalism."
 TEX_pax_american:0 "Pax Americana"
-TEX_pax_american_desc:0 "-"
+TEX_pax_american_desc:0 "The American eagle once in despair of his place in the world now flies above proud and high. Where ever the eagle flies so does the protection of America. We have made not just America safer but the world safer. Now we shall enjoy the results of our Pax Americana."
 TEX_manifest_destiny:0 "Manifest Destiny"
-TEX_manifest_destiny_desc:0 "-"
+TEX_manifest_destiny_desc:0 "It was America's God given destiny to spread across the land from sea to shinning sea. However in the chaos of the civil war, many sought to leave America’s embrace. Now that the civil war is over, it is time to once again seek to obey God's will and spread across the continent."
 TEX_reclaim_california:0 "Reclaiming the Pacific"
-TEX_reclaim_california_desc:0 "-"
+TEX_reclaim_california_desc:0 "The corrupt men and women in the Pacific States thought only of their own wealth when the Civil War began, now that we have one. It is time that we bring them back into America. Through diplomacy or force, the coast will be ours. "
 TEX_reclaim_new_england:0 "Reclaim New England"
-TEX_reclaim_new_england_desc:0 "-"
+TEX_reclaim_new_england_desc:0 "Canada attacked New England and has kept it under occupation ever sense. That is not what New Englanders should be doing! New England was where the American revolution began. When the first patriotic Americans fought the British! When Minutemen and Red-coats clashed. We must help remind our brothers and sisters in New England of this and liberate them. "
 TEX_reclaim_hawaii:0 "Reclaim Hawaii"
-TEX_reclaim_hawaii_desc:0 "-"
+TEX_reclaim_hawaii_desc:0 "Hawaii was taken over barely 50 years ago. Now we must decide what to do with the island. Should we bring it back within the Union or should they be our ally instead?"
+TEX_fate_of_the_philippines:0 "Reclaiming Alaska"
+TEX_fate_of_the_philippines_desc:0 Alaska was ours before the civil war but during the chaos it was lost. Now that the civil war is over, we should go and reclaim Alaska for America!"
 TEX_league_of_nations:0 "League of American States"
-TEX_league_of_nations_desc:0 "-"
+TEX_league_of_nations_desc:0 "To protect America, we should make sure that the other countries in America are friendly to us and do not let godless syndicalism to fester in their countries. The idea of a League of American States has been proposed to defend American interests and oppose Syndicalism throughout the Americas. "
 american_states_league_of_nations:0 "League of American States"
 TEX_american_school:0 "American School"
-TEX_american_school_desc:0 "-"
-TEX_american_cooperation:0 "American League Cooperation"
+TEX_american_school_desc:0 "Knowledge will keep America and her allies safe. We should help support the University of the Free World. Where the members of the League of American States will work together to improve our scientific understanding as well as help educate people in the dangers of syndicalism. "
 TEX_war_plan_red:0 "War Plan Red"
-TEX_war_plan_red_desc:0 "-"
+TEX_war_plan_red_desc:0 "Our military Strategists have developed a plan for dealing with Canada. Long in the past we have had dreams of America including Canada. With the Civil war and the Canadians deciding to 'liberate' New England. They have shown them to be nothing but dangerous snakes. To protect America we must prepare to Invade Canada!"
 TEX_entente_embargo:0 "Embargo the Entente"
-TEX_entente_embargo_desc:0 "-"
+TEX_entente_embargo_desc:0 "The economic might of America will be enough to bring the last remenents of the British Empire down to her knees. An embargo will destroy them and prepare us for the final killing blow against these snakes in the grass Canadians. "
 TEX_invade_canada:0 "Invade Canada"
-TEX_invade_canada_desc:0 "-"
+TEX_invade_canada_desc:0 "Now is the time to invade Canada! Time to once and for all pacify our neighbors to the north and make sure that the Canadians can never again try to go after America! God shall protect us as we help fight to make America safe from the dastardly Canadians!"
 
 ### Ideas ###
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
