Lao Republic -> Kingdom of Laos for PPSyrius

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3236,9 +3236,9 @@ LAO_radical_socialist_DEF:0 "The Lao People's Democratic Republic"
 LAO_social_democrat:0 "Kingdom of Laos"
 LAO_social_democrat_ADJ:0 "Laotian"
 LAO_social_democrat_DEF:0 "The Kingdom of Laos"
-LAO_social_liberal:0 "Lao Republic"
+LAO_social_liberal:0 "Kingdom of Laos"
 LAO_social_liberal_ADJ:0 "Laotian"
-LAO_social_liberal_DEF:0 "The Lao Republic"
+LAO_social_liberal_DEF:0 "The Kingdom of Laos"
 LAO_market_liberal:0 "Federated States of Laos"
 LAO_market_liberal_ADJ:0 "Laotian"
 LAO_market_liberal_DEF:0 "The Federated States of Laos"
