--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1385,9 +1385,9 @@ LAO_GER_subject_social_conservative_DEF:0 "The Kingdom of Laos"
 LAO_GER_subject_social_democrat:0 "Kingdom of Laos"
 LAO_GER_subject_social_democrat_ADJ:0 "Laotian"
 LAO_GER_subject_social_democrat_DEF:0 "The Kingdom of Laos"
-LAO_GER_subject_social_liberal:0 "Lao Republic"
+LAO_GER_subject_social_liberal:0 "Kingdom of Laos"
 LAO_GER_subject_social_liberal_ADJ:0 "Laotian"
-LAO_GER_subject_social_liberal_DEF:0 "The Lao Republic"
+LAO_GER_subject_social_liberal_DEF:0 "The Kingdom of Laos"
 LAO_GER_subject_syndicalist:0 "Lao People's Democratic Republic"
 LAO_GER_subject_syndicalist_ADJ:0 "Laotian"
 LAO_GER_subject_syndicalist_DEF:0 "Lao People's Democratic Republic"
