Small POL Opinion Modifier Change

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -348,6 +348,7 @@ POL_MEN_GER:0 "Elected J.K.D. Mendog III"
 POL_MEN_GER_POSITIVE:0 "Elected J.K.D. Mendog III"
 POL_MEN_LIT:0 "Elected J.K.D. Mendog III"
 POL_HA_AUS:0 "Elected J.K.W. Karl Olbracht Habsburg"
+POL_HA_GAL:0 "Elected J.K.W. Karl Olbracht Habsburg"
 POL_HA_GER:0 "Elected J.K.W. Karl Olbracht Habsburg"
 POL_ATTEND_INTERNATIONALE:0 "Interested in the Internationale"
 POL_SHUNNED_US:0 "The Poles have Shunned Us"
