Fengtian work, some Qing general pics

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -814,8 +814,8 @@ fengtian.new.90.d:0 "Despite the best efforts of local officials and even the Qi
 fengtian.new.90.a:0 "Unfortunate but necessary"
 
 fengtian.new.91.t:0 "Escalating the Propaganda War"
-fengtian.new.91.d:0 "INSERT"
-fengtian.new.91.d_mantetsu:0 "INSERT"
+fengtian.new.91.d:0 "Already the Propaganda Department is strenuously launching a devastating ideological barrage under which the regressive Qing regime must surely crack and crumble! The Grand Marshal has personally released several short speeches denouncing "the Kaiser’s puppet in Asia", Aisin Gioro Puyi, calling him “lower than a dog” for his “cowardice and brazen collaboration with the German intruder”, and for “selling out the Chinese people to foreign interests”. Just how much further can the illegitimate Qing government bow before it topples?
+fengtian.new.91.d_mantetsu:0 "Already the Propaganda Department is redoubling its efforts in launching a devastating ideological barrage under which the regressive Qing regime must surely crack and crumble! The Grand Marshal has personally released several short speeches denouncing "the Kaiser’s puppet in Asia", Aisin Gioro Puyi, calling him “lower than a dog” for his “cowardice and brazen collaboration with the German intruder”, and for “selling out the Chinese people to foreign interests”. \n\n At the same time, the degree of influence the Japanese hold over our own government is clear even to the lowest beggar, and so our efforts ring of hypocrisy in the ears of many."
 fengtian.new.91.a:0 "Southern reclamation is inevitable!"
 
 fengtian.new.92.t:0 "Artillery from Kokura"
@@ -855,7 +855,7 @@ fengtian.new.100.d:0 "In accordance with our contract, several more shipments of
 fengtian.new.100.a:0 "Good"
 
 fengtian.new.101.t:0 "The Grand Marshal's Proclamation"
-fengtian.new.101.d:0 "INSERT"
+fengtian.new.101.d:0 "An old proverb says: 'Virtue never lacks company; it will ever find support.' The forces of justice will rise, and men of goodwill ultimately co-operate in the interests of rectitude. There is little question that the regressive and illegitimate Qing government stands in the way of progress, oppressing and subjugating the Chinese people, and I have received every assurance that our allies will stand with us to end this injustice. On our part, we should hold fast to our stand and fix our eyes steadfastly on our goal, and be firm in our determination. The entire Northeast should carry on with oneness of heart. The final victory will be ours. I urge my ministers, our army, and our people to redouble their efforts in order to attain success. \n\n It is in this spirit, that I proclaim the beginning of the Year of Righteous Effort, a full three hundred and sixty five days of strenuous national effort, from which we shall emerge as a force unstoppable in the pursuit of our goal. And, when this year is done, the Five Color Flag will fly high again in Beijing, and the Qing government will be nothing but ash in the winds of history. Ten thousand years to the Republic! Zhonghua Mingguo Wansui!"
 fengtian.new.101.a:0 "Wansui!"
 
 fengtian.new.102.t:0 "Unfulfilled Promises"
@@ -892,7 +892,7 @@ fengtian.new.109.d:0 "Before it could ever truly begin, our uprising south of Sh
 fengtian.new.109.a:0 "Damn"
 
 fengtian.new.110.t:0 "The Gang of Three"
-fengtian.new.110.d:0 "As a loose coalition of fallen generals, governors, bureaucrats, and politicians exiled from the South by the collapse of the Beiyang Government and the return of the Qing, the Recovery League is widely acknowledged to be susceptable to corruption. Recent discoveries by police, however, suggest a level of corruption so far unheard of. It seem as if a group of Recovery League members, who were made mayors of townships in Jilin for their experience with governing in Zhili Province, were in fact never governors at all; killing and replacing their namesakes, and through a complicated plot of deceit, fooling the authorities while eliminating any who might contradict them. \n\n The web of lies, corruption, and murder necessary to sustain this falsehood stretch across the whole of the Northeast, and the damage dealt to the government's legitimacy is not inconsiderable."
+fengtian.new.110.d:0 "As a loose coalition of fallen generals, governors, bureaucrats, and politicians exiled from the South by the collapse of the Beiyang Government and the return of the Qing, the Recovery League is widely acknowledged to be susceptable to corruption. Recent discoveries by police, however, suggest this is operating on a level so far unheard of. It seems as if a group of Recovery League members, who were made mayors of townships in Jilin for their experience with governing in Zhili Province, were in fact never governors at all; killing and replacing their namesakes, and through a complicated plot of deceit, fooling the authorities while eliminating any who might contradict them. \n\n The web of lies, corruption, and murder necessary to sustain this falsehood stretch across the whole of the Northeast, and the damage dealt to the government's legitimacy is not inconsiderable."
 fengtian.new.110.a:0 "Disgusting"
 
 fengtian.new.111.t:0 "Mantetsu Bribes"
@@ -922,7 +922,7 @@ fengtian.new.116.d:0 "An article in the Nihon Kogyō Shimbun, or 'Japan Industri
 fengtian.new.116.a:0 "Disgraceful!"
 
 fengtian.new.117.t:0 "Honghuzi Attacks in Heilongjiang"
-fengtian.new.117.d:0 "Honghuzi, translating literally to 'Red Beards', are groups of bandits and robbers that have long plagued the Northeast. While the Grand Marshal's Pacification and Centralization campaign after the Civil Wars reduced their numner, there have been attacks in the years since, and now several farmsteads in southern Heilongjiang were set alight, and their occupants robbed of all valuables."
+fengtian.new.117.d:0 "Honghuzi, translating literally to 'Red Beards', are groups of bandits and robbers that have long plagued the Northeast. While the Grand Marshal's Pacification and Centralization campaign after the Civil Wars reduced their numner, there have been attacks in the years since, and now several farmsteads in southern Heilongjiang were set alight, and their occupants robbed of valuables."
 fengtian.new.117.a:0 "Unfortunate"
 
 fengtian.new.118.t:0 "Honghuzi Attacks in Xing'an"
