--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -879,20 +879,20 @@ japfor.203.a:0 "False accusations!"
 japfor.203.b:0 "Punish this insolence!"
 
 japfor.204.t:0 "Fengtian Expels our Military Mission"
-japfor.204.d:0 "INSERT"
-japfor.204.d_mantetsu:0 "INSERT"
+japfor.204.d:0 "Fengtian has expelled our military mission, giving them twenty four hours to leave the country, taking with them all equipment and other property. Contrary to our expectations, however, this was accompanied by a diplomatic letter explaining that the Misson had acheived its goals, and that Fengtian is now sufficient in its command capacity. Fengtian's ambassador has also spent the last several hours attempting to convince the Foreign Ministry, in private of course, that this was merely a necessity of internal politics, and that no ill-will is intended toward Japan. \n\n While this may, or may not, be the case, there is little question as to whether this reduces our influence over Fengtian, and in turn could compromise the security of the Korean penninsula. Who is to say what these Chinese will do next?"
+japfor.204.d_mantetsu:0 "Fengtian has expelled our military mission, giving them twenty four hours to leave the country, taking with them all equipment and other property. Contrary to our expectations, however, this was accompanied by a diplomatic letter explaining that the Misson had acheived its goals, and that Fengtian is now sufficient in its command capacity. \n\n Fortunately, our control over Fengtian via Mantetsu is extensive, and we can almost certainly force their government to reverse its decision. This may force the more patriotic and militaristic elements of the government to independently declare war, and the consequences of such a situation should also be considered."
 japfor.204.a:0 "Declare war"
 japfor.204.b:0 "Force Fengtian to reconsider"
 japfor.204.c:0 "Punish Fengtian"
 japfor.204.d:0 "Do nothing"
 
 japfor.205.t:0 "Fengtian Expels our Military Mission"
-japfor.205.d:0 "INSERT"
+japfor.205.d:0 "Fengtian has expelled our military mission, giving them twenty four hours to leave the country, taking with them all equipment and other property. This not only severely threatens to upset our control over the Fengtian Government, but also potentially exposes Korea and thereby Japan to attack. This is thoroughly unacceptable, both to our generals, and to the Japanese sense of honor. Such an act of ungrateful insubordination must be met with an appropriate response!"
 japfor.205.a:0 "Send an Ultimatum"
 japfor.205.b:0 "Do nothing"
 
 japfor.206.t:0 "Fengtian Denounces Us!"
-japfor.206.d:0 "INSERT"
+japfor.206.d:0 "The iron ore deposits at Anshan have been worked by a Japanese-owned subsidiary of Mantetsu since 1918, known as “Anshan Iron and Steel”, serving as one of Japan’s most valuable sources of steel outside the Home Islands. Now that the company wants to expand, it has apparently begun digging without a permit, destroying farmland in the process, and triggering protests by the native Chinese. These protests escalated into violence, and lead to some regrettable actions by our local garrison. \n\n The Fengtian Government has released a long-winded and not at all atypical denouncement of our actions. How should we respond?"
 japfor.206.a:0 "Punish this insolence!"
 japfor.206.b:0 "Denounce Fengtian"
 japfor.206.c:0 "Stay silent"
