various fixes for India and Spain

--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -36,6 +36,7 @@ VICTORY_POINTS_688:0 "Salzburg"
 VICTORY_POINTS_690:0 "Brassó"
 VICTORY_POINTS_692:0 "München"
 VICTORY_POINTS_740:0 "Bilbao"
+VICTORY_POINTS_747:0 "Almería"
 VICTORY_POINTS_758:0 "La Coruña"
 VICTORY_POINTS_778:0 "Annecy"
 VICTORY_POINTS_788:0 "Norfolk"
@@ -48,6 +49,7 @@ VICTORY_POINTS_885:0 "Burgos"
 VICTORY_POINTS_911:0 "Toulon"
 VICTORY_POINTS_921:0 "Kayseri"
 VICTORY_POINTS_925:0 "Ancona"
+VICTORY_POINTS_931:0 "Badajoz"
 VICTORY_POINTS_940:0 "Konya"
 VICTORY_POINTS_947:0 "Bursa"
 VICTORY_POINTS_949:0 "Sofia"
@@ -192,11 +194,13 @@ VICTORY_POINTS_3838:0 "Ajáccio"
 VICTORY_POINTS_3878:0 "New York City"
 VICTORY_POINTS_3882:0 "Skopje"
 VICTORY_POINTS_3893:0 "Edirne"
+VICTORY_POINTS_3920:0 "León"
 VICTORY_POINTS_3924:0 "Split"
 VICTORY_POINTS_3938:0 "Madrid"
 VICTORY_POINTS_3957:0 "Washington"
 VICTORY_POINTS_3960:0 "Dallas"
 VICTORY_POINTS_3980:0 "Florina"
+VICTORY_POINTS_3986:0 "Toledo"
 VICTORY_POINTS_3992:0 "Nanchang"
 VICTORY_POINTS_3995:0 "Saipan"
 VICTORY_POINTS_3999:0 "Hakha"
@@ -340,7 +344,9 @@ VICTORY_POINTS_6855:0 "Columbus"
 VICTORY_POINTS_6882:0 "Newark"
 VICTORY_POINTS_6890:0 "Cleveland"
 VICTORY_POINTS_6906:0 "Valencia"
+VICTORY_POINTS_6907:0 "Salamanca"
 VICTORY_POINTS_6923:0 "Plovdiv"
+VICTORY_POINTS_6966:0 "Tarragona"
 VICTORY_POINTS_6973:0 "La Spezia"
 VICTORY_POINTS_6984:0 "Baltimore"
 VICTORY_POINTS_6994:0 "Aomori"
