PPsyrius 2Fast2Quick

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1367,9 +1367,9 @@ INC_GER_subject_authoritarian_democrat_DEF:0 "Freistaat Indochina"
 LAO_GER_subject_authoritarian_democrat:0 "Kingdom of Laos"
 LAO_GER_subject_authoritarian_democrat_ADJ:0 "Laotian"
 LAO_GER_subject_authoritarian_democrat_DEF:0 "The Kingdom of Laos"
-LAO_GER_subject_market_liberal:0 "Federated States of Laos"
+LAO_GER_subject_market_liberal:0 "Kingdom of Laos"
 LAO_GER_subject_market_liberal_ADJ:0 "Laotian"
-LAO_GER_subject_market_liberal_DEF:0 "The Federated States of Laos"
+LAO_GER_subject_market_liberal_DEF:0 "The Kingdom of Laos"
 LAO_GER_subject_national_populist:0 "Kingdom of Lan Xang"
 LAO_GER_subject_national_populist_ADJ:0 "Laotian"
 LAO_GER_subject_national_populist_DEF:0 "The Kingdom of Lan Xang"
