--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3239,9 +3239,9 @@ LAO_social_democrat_DEF:0 "The Kingdom of Laos"
 LAO_social_liberal:0 "Kingdom of Laos"
 LAO_social_liberal_ADJ:0 "Laotian"
 LAO_social_liberal_DEF:0 "The Kingdom of Laos"
-LAO_market_liberal:0 "Federated States of Laos"
+LAO_market_liberal:0 "Kingdom of Laos"
 LAO_market_liberal_ADJ:0 "Laotian"
-LAO_market_liberal_DEF:0 "The Federated States of Laos"
+LAO_market_liberal_DEF:0 "The Kingdom of Laos"
 LAO_social_conservative:0 "Kingdom of Laos"
 LAO_social_conservative_ADJ:0 "Laotian"
 LAO_social_conservative_DEF:0 "The Kingdom of Laos"
