--- a/localisation/KR_Greece_l_english.yml
+++ b/localisation/KR_Greece_l_english.yml
@@ -26,7 +26,6 @@ GRE_national_populist_party_long:0 "Ethnikoi Legeonaroi tis Elladas"
 greece.1.t:0 "The Prime Minister is Dead!"
 greece.1.d:0 "During a particularly heated debate in parliament over how to recover from the economic hardships, Prime Minister Eleftherios Venizelos dropped dead on the spot! Already crowds have gathered in many major cities to hold tribute to him. This truly is a dark day for Greece."
 greece.1.a:0 "God is with us!"
-
 #greece.1.b:0 "Let us open an investigation."
 #greece.2.t:0 "Investigation into the Death"
 #greece.2.d:0 "The police are now raiding the homes of suspected terrorists, political enemies, and former criminals. We have come up with several leads, but so far all have proved inconclusive. We must focus our efforts on one group for our investigation to be effective, although this may lead to false conviction."
@@ -34,4 +33,14 @@ greece.1.a:0 "God is with us!"
 #greece.2.b:0 "Raid the offices of the Syndicalists"
 #greece.2.c:0 "Keep Searching!"
 #greece.4.t:0 "Parliamentary Crisis!"
-#greece.4.d:0 "With the death of Prime Minister Venizelos, the governmental forces of this country have fallen into crisis. The Grand Coalition leading the Hellenic Parliament has dissolved, and the King has called an emergency session to decide the fate of this nation. Some are pushing for a new Prime Minister to be appointed by the King, while others are demanding an election be held within 70 days. Still, the King can activate his emergency powers and dissolve parliament for the time being...
+#greece.4.d:0 "With the death of Prime Minister Venizelos, the governmental forces of this country have fallen into crisis. The Grand Coalition leading the Hellenic Parliament has dissolved, and the King has called an emergency session to decide the fate of this nation. Some are pushing for a new Prime Minister to be appointed by the King, while others are demanding an election be held within 70 days. Still, the King can activate his emergency powers and dissolve parliament for the time being..."
+greece.5.t:0 "Seize the Ionians?"
+greece.5.d:0 "The Ionian Islands were unjustly taken from us by Austria after the weltkreig. With Austria now preoccupied fighting Hungary, perhaps now would be the time to retake the islands?"
+greece.5.a:0 "Seize them!"
+greece.5.b:0 "We better not."
+greece.6.t:0 "Greece annexes the Ionians"
+greece.6.d:0 "Seeing our current war as an opportunity, Greece has annexed the Ionian Islands. This is an outrageous act, but in our current state of war we are not in a position to reclaim our rightful territories immediately. What shall we do?"
+greece.6.a:0 "A violation of our soveriegnty! War!"
+greece.6.b:0 "We will have to wait before reclaiming the islands."
+
+
