some bits of localisation

--- a/localisation/KR_Austria_Ausgleich_new_l_english.yml
+++ b/localisation/KR_Austria_Ausgleich_new_l_english.yml
@@ -45,6 +45,7 @@ ausgleich.new.304.t:0 "The Delegations arrive - Hungary absent"
 
 
 ausgleich.new.310.t:0 "A Hungarian Delegatory holds a speech"
+ausgleich.new.310.d:0 "Standing .... \n\nWhile his copatriots were visibly disturbed by this..."
 ausgleich.new.310.a:0 "How insolent."
 ausgleich.new.310.b:0 "Remove him from the negotiations."
 ausgleich.new.310.c:0 "He's right though, isn't he?"
@@ -54,6 +55,7 @@ ausgleich.new.310.g:0 "Remove him from the negotiations."
 ausgleich.new.310.h:0 "He's right though, isn't he?"
 
 ausgleich.new.311.t:0 "Hungary demands Reparation"
+ausgleich.new.311.d:0 "As anticipated, the Hungarian delegation once again demands recompensation for the loss of the territories of Croatia-Slavonia, that were in vassalage under the Hungarian Crown until 1923, when said territories were ceded to the newly formed Kingdom of Illyria. Whilst "
 ausgleich.new.311.a:0 "Offer them to pay from our own coffers."
 ausgleich.new.311.b:0 "This debt should be paid by the Illyrians."
 ausgleich.new.311.c:0 "This debt should be paid by the Illyrians. Let's try to negotiate here."
@@ -61,16 +63,19 @@ ausgleich.new.311.e:0 "That is precisely why you pay less taxes now."
 ausgleich.new.311.f:0 "If they miss Croatia-Slavonia that much, they might as well have it back."
 
 ausgleich.new.312.t:0 "Bohemia proposes a Slovak State"
+ausgleich.new.312.d:0 "In the vain of the discussions on the day before, the Bohemian delegation brings up the issue that is the Slovak people living under direct rule of the Hungarian Crown. Without any special rights or autonomy, the Slovak people have been the victim of an ongoing policy of Magyarisation. \n\nThe Bohemian delegation proposes the creation of an autonomous state for the Slovak people as a solution 'to free their brothers from the Magyar yoke'."
 ausgleich.new.312.a:0 "How does this even concern you?"
-ausgleich.new.312.b:0 "Ask Hungary to consider this."
+ausgleich.new.312.b:0 "This is certainly a thing Hungary should consider."
 ausgleich.new.312.c:0 "It should be done. Still, this requires further planning."
 
 ausgleich.new.313.t:0 "Galicia demands Transcarpathia"
+ausgleich.new.313.d:0 "Joining in on the recent trend of demanding Hungarian "
 ausgleich.new.313.a:0 "The Ausgleich Negotiations are not a place to ask for territorial concessions."
 ausgleich.new.313.b:0 "We cannot ask this of the Hungarians here and now."
 ausgleich.new.313.c:0 "It should be done. Let us work towards it."
 
 ausgleich.new.314.t:0 "Illyria demands the Banate"
+ausgleich.new.314.d:0 "Joining in on the recent trend of demanding Hungarian land, Illyria now too demands cessation of the Bačka territory. While it is home to many Illyrians, claiming this strip of land in the southernmost region of Hungary is a rather audacious move by the Illyrian delegation, especially considering that Hungary is not yet formally recognizing the South Slavic State."
 ausgleich.new.314.a:0 "The Ausgleich Negotiations are not a place to ask for territorial concessions."
 ausgleich.new.314.b:0 "We cannot ask this of the Hungarians here and now."
 ausgleich.new.314.c:0 "It should be done. Let us work towards it."
