Some minor loc, they still lack a lot :flag_py:

--- a/localisation/KR_Paraguay_l_english.yml
+++ b/localisation/KR_Paraguay_l_english.yml
@@ -1,5 +1,14 @@
 ﻿l_english:
 
+
+PAR_rebilsing:0 "Rebuilding the Goverment"
+PAR_rebilsing_desc:0 "We are taking many steps towards making the state functional again"
+PAR_repuilt:0 "Government Rebuilt"
+PAR_repuilt_desc:0 "Like a phoenix, from the ashes, we arise time and time again"
+PARnoforeignfarmer:0 "Siezed Foreign Farmlands"
+PARnoforeignfarmer_desc:0 "The assets of argentine farmers have been taken over by the state in an effort to diminsh their infulence"
+PARdefensoresdelchaco:0 "Defensores del Chaco"
+
 ### Parties ###
 PAR_social_democrat_party:0 "LNI"
 PAR_social_democrat_party_long:0 "Liga Nacional Independiente"
@@ -24,15 +33,25 @@ PAR_totalist_party_long:0 "Partido Maximalista Paraguayo"
 
 ### Focuses ###
 PAR_libertadomuerte:0 "Libertad o Muerte"
+PAR_libertadomuerte_desc:0 "We earned our freedom, and we will never let it go again!"
 PAR_rebuildgovernment:0 "Rebuild the Government"
+PAR_rebuildgovernment_desc:0 "Rebuilding a state after decades of occupation is a dauting task, and one that requires our immediate attention"
 PAR_deargentinezation:0 "De-Aargentinsation of the Government"
+PAR_deargentinezation_desc:0 "Our government right now is still to remnicent to many to the puppets of La Plata, we must change this"
 PAR_reorganizedjustice:0 "Reorganised Justice System"
+PAR_reorganizedjustice_desc:0 "A restored constituition has been put in place, for the greater good of our nation"
 PAR_greatpublicworks:0 "Great Public Works"
+PAR_greatpublicworks-desc:0 "Many of our greatest cities were left to rot under Argentine occupation. One more thing that wont happen in a free Paraguay"
 PAR_thelayoftheland:0 "Lay of Land"
+PAR_thelayoftheland_desc:0 "A detailed land survey and great infrastructure works will be starting, to ensure the prosperity of our reborn nation"
 PAR_statefinishrebuilding:0 "Finish Rebuilding of the State"
+PAR_statefinishrebuilding_desc:0 "The people now realize we are on their side, and the goverment functions properly. Paraguay vive!"
 PAR_deporttheinvaders:0 "Deport the Invaders"
+PAR_deporttheinvaders_desc:0 "The Argentine land thieves have no buisness being here. All that it can take to change that is the signing of a decree..."
 PAR_milfacadm:0 "Extensive Rearmament Program"
+PAR_milfacadm_desc:0 "Our new nation has to rebuild its miliary if it is to survive these troubled times"
 PAR_expellargentinefarmers:0 "Seize Argentine Farms"
+PAR_expellargentinefarmers_desc:0 "Many Argentines were keen to take advantage of the occupation and steal lands from our farmers, even if in absentia, they steal what is ours. We will no longer allow that to happen"
 PAR_siezeargieubran:0 "Seize Argentine Property"
 PAR_industrialinvestments:0 "Industrial Effort"
 PAR_industrialinvestments2:0 "Redouble Industrial Effort"
