--- a/localisation/KR_Piratini_l_english.yml
+++ b/localisation/KR_Piratini_l_english.yml
@@ -43,8 +43,11 @@ PIR.1.c: "Partido Federal - Clotário Portugal and Barbosa Martins"
 
 ### Focuses ###
 PIR_mil:0 "Newborn Armed Forces"
+PIR_mil:0 ""
 PIR_mil2:0 "Organise the Riograndense Armed Forces"
+PIR_mil2:0 ""
 PIR_army:0 "Artillery Battalions"
+PIR_army:0 ""
 PIR_doct:0 "Modern Combat Doctrine"
 PIR_eq:0 "Infantry Equipment Manufacturing"
 PIR_miltech:0 "Military Technology Effort"
@@ -61,6 +64,7 @@ PIR_cas:0 "Dive Bombing Training"
 PIR_para:0 "Divisões Paraquedistas"
 PIR_tattered_pride:0 "Complete Army Reform"
 PIR_phoenix:0 "Rio Grande Reborn"
+PIR_phoenix_desc:0 "May our deeds be an example to all of the Earth!"
 PIR_pp:0 "Government Rebuilding"
 PIR_good_govt:0 "Efficient Rule"
 PIR_consolidated_state_policies:0 "Consolidated State Policies"
