--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -822,7 +822,7 @@ rusfor.1008.d:0 "Germany was beaten and doesn't exist as a world power anymore, 
 rusfor.1008.a:0 "Great!"
 
 rusfor.1009.t:0 "What do to with Don-Kuban Union?"
-rusfor.1009.d:0 "The lands of the Don and Kuban Cossack hosts, between the Black and Caspian seas, was historically a part of the Russian Empire until, during the chaos of the Bolshevik Revolution and ensuing Civil War and German Intervention, an independent Don-Kuban Union was established by charismatic White leader Petr Krasnov with support from Berlin. Now, however, Russia seems ready to reincorporate this petty state into the Motherland. How shall we proceed? Whatever course of action we take, we must be prepared for a conflict of interests with Germany, as the Reich will certainly not take lightly our ambitions, especially towards a state friendly to them."
+rusfor.1009.d:0 "The lands of the Don and Kuban Cossack hosts, between the Black and Caspian seas, was historically a part of the Russian Empire until, during the chaos of the Bolshevik Revolution and ensuing Civil War and German Intervention, an independent Don-Kuban Union was established by charismatic White leader Pyotr Krasnov with support from Berlin. Now, however, Russia seems ready to reincorporate this petty state into the Motherland. How shall we proceed? Whatever course of action we take, we must be prepared for a conflict of interests with Germany, as the Reich will certainly not take lightly our ambitions, especially towards a state friendly to them."
 
 rusfor.1009.a:0 "Start consulting with Germany"
 rusfor.1009.b:0 "Start sending agitators"
