--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -793,7 +793,7 @@ russia.21.d:0 "'Princypiya Geopolitiki', published in the late 30's by Nikolai T
 russia.21.a:0 "An interesting concept indeed!"
 
 russia.22.t:0 "Neo-Slavic Revival"
-russia.22.d:0 "With the Russian situation slowly stabilising, some politicians, philosophers and scholars are attempting to revive the 19th century concept of Pan-Slavism, a vision of a united Slavic federation, centred around Russia. These ideas are gaining quick support among the conservative military officers, including Anton Denikin and Petr Wrangel."
+russia.22.d:0 "With the Russian situation slowly stabilising, some politicians, philosophers and scholars are attempting to revive the 19th century concept of Pan-Slavism, a vision of a united Slavic federation, centred around Russia. These ideas are gaining quick support among the conservative military officers, including Anton Denikin and Pyotr Wrangel."
 russia.22.a:0 "An interesting concept indeed!"
 
 russia.23.t:0 "The Capital"
