Final tweaks before the release

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -494,7 +494,7 @@ TRM_Navy_Docks_desc:0 "Vladivostok is our great pearl. We must do everything to 
 TRM_Navy_Old_Ways:0 "Legacy of Weltkrieg"
 TRM_Navy_Old_Ways_desc:0 "A lot of time passed since the end of the Weltkrieg. Naval thoughts have changed and new brand technologies such as carriers and submarines appeared. But these new toys are nothing comparing with some old good ships. The big and strong navy will destroy everything."
 
-TRM_Navy_Cruiser_desc:0 "Cruiser Effort"
+TRM_Navy_Cruiser:0 "Cruiser Effort"
 TRM_Navy_Cruiser_desc:0 "We are not ready to construct big battleships, so it's wise to focus on smaller ships such as cruisers. They are one of the keys to dominate the seas and we must have some."
 
 TRM_Navy_DD:0 "Destroyer Effort"
@@ -524,8 +524,8 @@ TRM_Ind_Dock_desc:0 "Vladivostok is our only way to construct ships. We need eve
 TRM_Ind_Khab:0 "Expand Industry in Khabarovsk"
 TRM_Ind_Khab_desc:0 "Khabarovsk is our second biggest city. Although, the word "big" is not about our country, we can expand industry in this city to make it appropriate for our future plans."
 
-TRM_Ind_Transsib:0 "Improve Transsib Railroad"
-TRM_Ind_Transsib_desc:0 "Now we have part of the Transsib Railroad. The railroad itself in very poor conditions. If we invest some efforts to rebuild and improve it, railroad gives us a fast supply line."
+TRM_Ind_Transsib:0 "Revive Trans-Siberian Railway"
+TRM_Ind_Transsib_desc:0 "Now we have part of the Transsib Railway. The railroad itself in very poor conditions. If we invest some efforts to rebuild and improve it, our supply lines will be much faster for sure."
 
 TRM_Ind_Sib:0 "Expand Far Eastern Industry"
 TRM_Ind_Sib_desc:0 "Russian Far East is just a vast wasteland of snow and tundra. But even in this harsh climate we can open some new facilities to develop our industry."
@@ -551,7 +551,7 @@ TRM_Ind_Research_desc:0 "Our recent conquests have bring many wise minds into ou
 TRM_Arm_Start:0 "Begin Militarisation"
 TRM_Arm_Start_desc:0 "Too long we relied on Japanese protection. We must build up our own army. It will take us some time to prepare everything."
 
-TRM_Arm_Doc:0 "Expand Military Stuff"
+TRM_Arm_Doc:0 "Expand Military Staff"
 TRM_Arm_Doc_desc:0 "We have a lack of proper officers to command our troops. We must train new young generation of officers."
 
 TRM_Arm_Commando:0 "Expand Special Forces"
