Team credits updated

--- a/localisation/KR_Greece_l_english.yml
+++ b/localisation/KR_Greece_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-##Parties##
+### Parties ###
 GRE_totalist_party:0 "SEKE-T"
 GRE_totalist_party_long:0 "Sosialistikó Ergatikó Kómma Elládas-Totalistís"
 GRE_syndicalist_party:0 "SEKE-S"
@@ -22,7 +22,7 @@ GRE_paternal_autocrat_party_long:0 "Neon Kratos"
 GRE_national_populist_party:0 "EEE"
 GRE_national_populist_party_long:0 "Ethnikoi Legeonaroi tis Elladas"
 
-##Events##
+### Events ###
 greece.1.t:0 "The Prime Minister is Dead!"
 greece.1.d:0 "During a particularly heated debate in parliament over how to recover from the economic hardships, Prime Minister Eleftherios Venizelos dropped dead on the spot! Already crowds have gathered in many major cities to hold tribute to him. This truly is a dark day for Greece."
 greece.1.a:0 "God is with us!"
@@ -40,7 +40,7 @@ greece.5.a:0 "Seize them!"
 greece.5.b:0 "We better not."
 greece.6.t:0 "Greece annexes the Ionians"
 greece.6.d:0 "Seeing our current war as an opportunity, Greece has annexed the Ionian Islands. This is an outrageous act, but in our current state of war we are not in a position to reclaim our rightful territories immediately. What shall we do?"
-greece.6.a:0 "A violation of our soveriegnty! War!"
+greece.6.a:0 "A violation of our sovereignty! War!"
 greece.6.b:0 "We will have to wait before reclaiming the islands."
 
 
